--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -5,5 +5,8 @@
 	"contact": "Contact",
 	"hello":"Hello there i am",
 	"name": "Maksym Yankivskyy",
-	"description-skills": "I started programming, 4 years ago, I obtained a diploma of Designer and developer of digital solutions and in parallel, I worked in an agency and here I am today ready to do my best to achieve your project with all my skills."
+	"description-skills": "I started programming, 4 years ago, I obtained a diploma of Designer and developer of digital solutions and in parallel, I worked in an agency and here I am today ready to do my best to achieve your project with all my skills.",
+	"title-contact": "Let's work together",
+	"description-contact": "Interested in working together? We should queue up a chat. I’ll buy the coffee.",
+	"footer-contact": "30% of all profit is going for help Ukraine"
 }
