--- a/src/translation/ua.json
+++ b/src/translation/ua.json
@@ -5,5 +5,8 @@
 	"contact": "Контакти",
     "hello":"Привіт я",
     "name": "Максим Янківський",
-	"description-skills": "Я почав програмувати, 4 роки тому отримав диплом дизайнера та розробника цифрових рішень і паралельно працював в агентстві і ось сьогодні я готовий зробити все можливе, щоб досягти вашого проекту з усіма своїми навичками."
+	"description-skills": "Я почав програмувати, 4 роки тому отримав диплом дизайнера та розробника цифрових рішень і паралельно працював в агентстві і ось сьогодні я готовий зробити все можливе, щоб досягти вашого проекту з усіма своїми навичками.",
+	"title-contact": "Давайте працювати разом",
+	"description-contact": "Цікаво працювати разом? Ми повинні обговорити. Я купую каву.",
+	"footer-contact": "30% всього прибутку йде на допомогу Україні"
 }
