--- a/src/translation/fr.json
+++ b/src/translation/fr.json
@@ -5,5 +5,8 @@
 	"contact": "Contact",
 	"hello":"Bonjour je suis",
 	"name": "Yankivskyy Maksym",
-	"description-skills": "J'ai commencé la programmation, il a 4 ans, j'ai obtenu un diplôme de Concepteur et développeur de solution digital et en parallèle, j'ai travaillé dans une agence et me voila aujourd'hui prêt à faire mon maximum pour réaliser votre projet avec toutes mes compétences. "
+	"description-skills": "J'ai commencé la programmation, il a 4 ans, j'ai obtenu un diplôme de Concepteur et développeur de solution digital et en parallèle, j'ai travaillé dans une agence et me voila aujourd'hui prêt à faire mon maximum pour réaliser votre projet avec toutes mes compétences.",
+	"title-contact": "Travaillons ensemble",
+	"description-contact": "Intéressé à travailler ensemble ? On devrait discuter. J'achéte le café.",
+	"footer-contact": "30% de tous les bénéfices vont à l'aide Ukraine"
 }
