--- a/src/translation/ua.json
+++ b/src/translation/ua.json
@@ -8,5 +8,15 @@
 	"description-skills": "Я почав програмувати, 4 роки тому отримав диплом дизайнера та розробника цифрових рішень і паралельно працював в агентстві і ось сьогодні я готовий зробити все можливе, щоб досягти вашого проекту з усіма своїми навичками.",
 	"title-contact": "Давайте працювати разом",
 	"description-contact": "Цікаво працювати разом? Ми повинні обговорити. Я купую каву.",
-	"footer-contact": "30% всього прибутку йде на допомогу Україні"
+	"footer-contact": "30% всього прибутку йде на допомогу Україні",
+	"AnneLise-description": "Портфоліо для графічного дизайнера з ефектом прокручування та каруселлю для виділення проектів",
+	"AnneLise-techno": "Javascript, html, scss, parcel",
+	"MarsExodus-description": "Це прогресивний веб-додаток, призначений для підготовки мандрівників до відправлення на Марс. Ця програма містила календар із подіями в транспортному засобі, щоб зробити подорож приємнішою за допомогою соціальної мережі, інтегрованої в програму, а також часткової погоди на Марсі завдяки NASA API.",
+	"MarsExodus-techno": "React.js, Typescript, StyledComponents",
+	"Wonder-description": "Wonder — це мобільний додаток, створений за тиждень. Метою цієї програми було полегшити вибір видів діяльності під час відвідування міста. Користувач мав у своєму розпорядженні GPS-місцезнаходження близьких йому людей, які володіли програмою, вибравши одного з людей, яких користувач міг побачити місця для відвідування, a також фотографії, що стосуються цих місць.",
+	"Wonder-techno": "ReactNative",
+	"JustKnow-description": "Just Know це веб-сайт вікторини, де користувач заповнює своє ім’я та виконує коротку вікторину, де в кінці він отримує свій результат.",
+	"JustKnow-techno": "javascript, css, html",
+	"Blog-description": "Mafioso — це невеликий експериментальний блог, де використовуються кілька зовнішніх API, зокрема для тексту, а також для зображень, і користувач має можливість додавати статті до своїх улюблених.",
+	"Blog-techno": "Vue.js, scss"
 }
