--- a/src/translation/fr.json
+++ b/src/translation/fr.json
@@ -5,18 +5,18 @@
 	"contact": "Contact",
 	"hello":"Bonjour je suis",
 	"name": "Yankivskyy Maksym",
-	"description-skills": "J'ai commencé la programmation, il a 4 ans, j'ai obtenu un diplôme de Concepteur et développeur de solution digital et en parallèle, j'ai travaillé dans une agence et me voila aujourd'hui prêt à faire mon maximum pour réaliser votre projet avec toutes mes compétences.",
+	"description-skills": "J'ai commencé la programmation, il a 4 ans, j'ai obtenu un diplôme de Concepteur et développeur de solution digital et en parallèle, j'ai travaillé dans une agence et me voilà aujourd'hui prêt à faire mon maximum pour réaliser votre projet avec toutes mes compétences.",
 	"title-contact": "Travaillons ensemble",
-	"description-contact": "Intéressé à travailler ensemble ? On devrait discuter. J'achéte le café.",
+	"description-contact": "Intéressé à travailler ensemble ? On devrait discuter. J'achète le café.",
 	"footer-contact": "30% de tous les bénéfices vont à l'aide humanitaire en Ukraine",
-	"AnneLise-description": "Portfolio pour une designeuse graphique avec quelque effet d'apparition au scrool et un carousel pour mettre en avant les projets",
+	"AnneLise-description": "Portfolio pour une designeuse graphique avec quelque effet d'apparition au scrolle et un carrousel pour mettre en avant les projets",
 	"AnneLise-techno": "Javascript, html, scss, parcel",
-	"MarsExodus-description": "C'est une progressive web app qui avait pour bute de préparer les voyageur a partir sur mars cett applicationn comprenait un calendrier avec les événements dans le véseau pour rendre le voyage plus agréable avec un réseau social intégré a l'application ainsi qu'un partie météo sur mars grace a l'api de la nasa.",
+	"MarsExodus-description": "C'est une progressif web app qui avait pour but de préparer les voyageurs à partir sur mars cette application possédait un calendrier avec les événements dans le vaisseau pour rendre le voyage plus agréable avec un réseau social intégré a l'application ainsi qu'une partie grasse à l'api de la NASA.",
 	"MarsExodus-techno": "React.js, Typescript, StyledComponents",
-	"Wonder-description": "Wonder est une application mobile réalisé en une semaine, L’objectif de cette application était de faciliter le choix des activité lors de la visite d’une ville. L’utilisateur avait a ça disposition la localisation gps des personnes proche de lui qui possédait l’application  en selection l’une des persones l’utilisateur pouvait voir les lieux a visiter ainsi que des photos concernnant ces lieux.",
+	"Wonder-description": "Wonder est une application mobile réalisée en une semaine, l’objectif de cette application était de faciliter le choix des activités lors de la visite d’une ville. L’utilisateur avait à sa disposition la localisation GPS des personnes proches de lui qui possédait l’application. L'utilisateur pouvait sélectionner une des personnes et voir les lieux a visiter ainsi que des photos concernant ces lieux que la personne recommande.",
 	"Wonder-techno": "ReactNative",
-	"JustKnow-description": "Just Know est un site web de quizz ou l'utilisateur rensignne son nom et fait unn petit quizz ou a la fin il a sont résultat.",
+	"JustKnow-description": "Just Know est un site web de quiz ou l'utilisateur renseigne son nom et fait un petit quiz ou à la fin il a son résultat.",
 	"JustKnow-techno": "javascript, css, html",
-	"Blog-description": "Mafioso est un petit blogue expérimental ou plusieur api externe son utilisé notamment pour le text ainsi que pour les images et l'utilisateur a la possibilité d'ajouet a ses favorie les articles.",
+	"Blog-description": "Mafioso est un petit blogue expérimental ou plusieurs api externe son utilisé notamment pour le texte ainsi que pour les images et l'utilisateur a la possibilité d'ajouter a ses favoris les articles.",
 	"Blog-techno": "Vue.js, scss"
 }
