--- a/src/translation/fr.json
+++ b/src/translation/fr.json
@@ -5,18 +5,18 @@
 	"contact": "Contact",
 	"hello":"Bonjour je suis",
 	"name": "Yankivskyy Maksym",
-	"description-skills": "J'ai commencé la programmation depuis 2019, j'ai obtenu un diplôme de Concepteur et développeur de solution digital et en parallèle, j'ai travaillé dans une agence et me voilà aujourd'hui prêt à faire mon maximum pour réaliser votre projet avec toutes mes compétences.",
+	"description-skills": "J'ai commencé la programmation dès 2019, j'ai obtenu un diplôme de Concepteur et Développeur de solution digital et en parallèle, j'ai travaillé dans une agence et me voilà aujourd'hui prêt à faire mon maximum pour réaliser votre projet avec toutes mes compétences.",
 	"title-contact": "Travaillons ensemble",
-	"description-contact": "Intéressé à travailler ensemble ? On devrait discuter. J'achète le café.",
+	"description-contact": "Intéressé à travailler ensemble ? On devrait discuter. Je m'occupe du café !",
 	"footer-contact": "30% de tous les bénéfices vont à l'aide humanitaire en Ukraine",
-	"AnneLise-description": "Portfolio pour une designeuse graphique avec quelque effet d'apparition au scrolle et un carrousel pour mettre en avant les projets",
-	"AnneLise-techno": "Javascript, html, scss, parcel",
-	"MarsExodus-description": "C'est une progressif web app qui avait pour but de préparer les voyageurs à partir sur mars cette application possédait un calendrier avec les événements dans le vaisseau pour rendre le voyage plus agréable avec un réseau social intégré a l'application ainsi qu'une partie grasse à l'api de la NASA.",
+	"AnneLise-description": "Portfolio pour une designer graphique avec quelques effets d'apparition au scroll et un carrousel pour mettre en avant les projets",
+	"AnneLise-techno": "JavaScript, HTML, SCSS, Parcel",
+	"MarsExodus-description": "C'est une Progressive Web App qui avait pour but de préparer les voyageurs à partir sur Mars, cette application possédait un calendrier avec les événements dans le vaisseau pour rendre le voyage plus agréable accompagné d'un réseau social intégré à l'application et pour finir la météo de Mars qui était récupérée grâce à l'API de la NASA.",
 	"MarsExodus-techno": "React.js, Typescript, StyledComponents",
-	"Wonder-description": "Wonder est une application mobile réalisée en une semaine, l’objectif de cette application était de faciliter le choix des activités lors de la visite d’une ville. L’utilisateur avait à sa disposition la localisation GPS des personnes proches de lui qui possédait l’application. L'utilisateur pouvait sélectionner une des personnes et voir les lieux a visiter ainsi que des photos concernant ces lieux que la personne recommande.",
+	"Wonder-description": "Wonder est une application mobile réalisée en une semaine, l’objectif de cette application était de faciliter le choix des activités lors de la visite d’une ville. L’utilisateur avait à sa disposition la localisation GPS des personnes proches de lui qui possédaient l’application. L'utilisateur pouvait sélectionner une des personnes et voir les lieux a visiter ainsi que des photos concernant ces lieux que la personne recommande.",
 	"Wonder-techno": "ReactNative",
-	"JustKnow-description": "Just Know est un site web de quiz ou l'utilisateur renseigne son nom et fait un petit quiz ou à la fin il a son résultat.",
-	"JustKnow-techno": "javascript, css, html",
-	"Blog-description": "Mafioso est un petit blogue expérimental ou plusieurs api externe son utilisé notamment pour le texte ainsi que pour les images et l'utilisateur a la possibilité d'ajouter a ses favoris les articles.",
-	"Blog-techno": "Vue.js, scss"
+	"JustKnow-description": "Just Know est un site web de quiz où l'utilisateur renseigne son nom et réalise un petit quiz dont il avait les résultats à la fin.",
+	"JustKnow-techno": "JavaScript, CSS, HTML",
+	"Blog-description": "Mafioso est un petit blogue expérimental où plusieurs API externes sont utilisées notamment pour le texte, pour les images et l'utilisateur. Il a aussi la possibilité d'ajouter les articles à ses favoris.",
+	"Blog-techno": "Vue.JS, SCSS"
 }
