--- a/src/translation/ua.json
+++ b/src/translation/ua.json
@@ -18,5 +18,8 @@
 	"JustKnow-description": "Just Know це веб-сайт вікторини, де користувач заповнює своє ім’я та виконує коротку вікторину, де в кінці він отримує свій результат.",
 	"JustKnow-techno": "javascript, css, html",
 	"Blog-description": "Mafioso — це невеликий експериментальний блог, де використовуються кілька зовнішніх API, зокрема для тексту, а також для зображень, і користувач має можливість додавати статті до своїх улюблених.",
-	"Blog-techno": "Vue.js, scss"
+	"Blog-techno": "Vue.js, scss",
+	"send-email" : "Зв'яжіться по електронній пошті",
+	"call-me" : "Зателефонуй мені",
+	"see-more": "Побачити більше"
 }
